Add algorithms, update IDE settings and docs
Add small algorithm examples and refactor app/test code; update IDE/project configs and documentation.\n\nChanges include: added basic classes (Loop, _1TwoSumTarget) and implemented smallest-substring algorithm in Main; refactored Test.java (calculator flow, input parsing fix, java8 helper stub); minor fix in ComparatorTest to use StaticData.getAllStudents(); reorganized EvenAndOddPrinter (moved main/printResults, added stacktrace logging).\n\nProject config updates: modify .classpath (export flags, attributes), update .gitignore (sublime entries and path), change Eclipse prefs to report preview features as warning.\n\nDocs: large cleanups and formatting changes to devops/sql documentation and Multi-Stage Dockerfile content; added src/main/java/com/ankit/poc/sql/.DS_Store (binary).